# ndt-detection-with-unet

./: .gitignore  aspect_ratio.ipynb  check_custom_unet.ipynb  check_custom_yolo_v8.ipynb  check_date_pure.ipynb  check_ds_distribution.ipynb  check_duplicate.ipynb  check_overlap.ipynb  check_proportion.ipynb  check_strange_display.ipynb  check_the_bounding_box.ipynb  check_the_teacher.ipynb  check_the_unet.ipynb  check_unet_ss_result.ipynb  compose_artificial_images.ipynb  continue_handle_split.ipynb  convert_pixels_to_mask.ipynb  crop_imgs_correctly.ipynb  crop_video.ipynb  demo01.ipynb  display_in_sequential_only_without_helmet_keras.ipynb  eca_model_training.ipynb  extract_incorrect_result.ipynb  fill_in_invalid.ipynb  generate_enhanced_image.ipynb  get_out_helmet_images.ipynb  knowledge_distillation.ipynb  load_keras_mode.ipynb  mlp_mixer_model_training.ipynb  optimize_model.ipynb  optimize_model_another.ipynb  permute-folder-custom-dataset.ipynb  permute-folder.ipynb  place_file_into_correct_location.ipynb  place_train_test_split.ipynb  precheck.ipynb  pyproject.toml  resize_with_pad_the_image.ipynb  restore_artificial_image.ipynb  safety_ai.ipynb  (+20 more)
layers/: __init__.py  backbones.py  models.py
utils/: __init__.py  convert.py  datasets.py  extract_coords.py  image_crop.py  loss.py
workers/: __init__.py  models.py
